# phigbot

./: Cargo.toml  README.md  tips.json
.github/workflows/: ci.yml
src/: main.rs
src/constants/: mod.rs
