[package]
name = "phigbot"
homepage = "https://github.com/poly000/phigbot"
description = "telegram bot for Phigros"
authors = ["poly000"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"

[profile.release]
strip = true
codegen-units = 1
lto = true
