[package]
name = "phigbot"
homepage = "https://github.com/poly000/phigbot"
description = "telegram bot for Phigros"
authors = ["poly000"]
license = "GPL-3.0"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.13.0", features = ["ctrlc_handler", "macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
sorensen = "0.2.0"

[profile.release]
strip = true
codegen-units = 1
lto = "thin"
